--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -4,11 +4,9 @@ title: "Module Details: {{name}} (v3)"
 
 ## The "{{name}}" Module
 
-{% if introduction is defined -%}
 {{introduction}}
 
-{% endif -%}
-{% if depends_on is defined -%}
+{% if depends_on -%}
 !!! note ""
     This module depends on {{depends_on.what}} and must be manually enabled at compile time.
     {{depends_on.condition|default('Once you have installed the dependency')}} you can enable this module using the following command:
@@ -28,13 +26,13 @@ To load this module use the following `<module>` tag:
 <module name="{{name}}">
 ```
 
-{% if configuration is defined -%}
+{% if configuration -%}
 {% for tag in configuration -%}
 #### `{{tag.name}}`
 
 {{tag.description}}
 
-{% if tag.attributes is defined and tag.attributes %}
+{% if tag.attributes %}
 <table>
 <tr>
     <th>Name</th>
@@ -53,7 +51,7 @@ To load this module use the following `<module>` tag:
 </table>
 {% endif %}
 
-{% if tag.extends is defined and tag.extends %}
+{% if tag.extends %}
 {# typically to extend `<class:privs>` #}
 <table>
 <tr>
@@ -69,9 +67,7 @@ To load this module use the following `<module>` tag:
 </table>
 {% endif %}
 
-{% if tag.details -%}
 {{tag.details}}
-{% endif -%}
 
 ##### Example Usage
 
@@ -83,7 +79,7 @@ This module requires no other configuration.
 
 {% endif -%}
 
-{% if commands is defined -%}
+{% if commands -%}
 ### Commands
 
 <table>
@@ -103,18 +99,16 @@ This module requires no other configuration.
 {% endfor %}
 </table>
 
-{%- if command_details is defined %}
 {{command_details}}
-{% endif %}
 
-{%- if example_commands is defined %}
+{%- if example_commands %}
 #### Example Usage
 
 {{example_commands}}
 {% endif %}
 {% endif %}
 
-{% if client_caps is defined -%}
+{% if client_caps -%}
 ### Client Capabilities
 
 <table>
@@ -131,10 +125,10 @@ This module requires no other configuration.
 </table>
 {% endif %}
 
-{% if chmodes is defined -%}
+{% if chmodes -%}
 ### Channel Modes
 
-{% if chmodes.description is defined %}{{chmodes.description}}{% endif %}
+{{chmodes.description}}
 
 {% if chmodes.chars %}
 <table>
@@ -167,10 +161,10 @@ This module requires no other configuration.
 {% endif -%}
 {% endif -%}
 
-{% if umodes is defined -%}
+{% if umodes -%}
 ### User Modes
 
-{% if umodes.description is defined %}{{umodes.description}}{% endif %}
+{{umodes.description}}
 
 <table>
 <tr>
@@ -201,7 +195,7 @@ This module requires no other configuration.
 {% endif -%}
 {% endif -%}
 
-{% if exemptions is defined -%}
+{% if exemptions -%}
 ### Exemptions
 
 <table>
@@ -218,10 +212,10 @@ This module requires no other configuration.
 </table>
 {% endif -%}
 
-{% if extbans is defined -%}
+{% if extbans -%}
 ### Extended Bans
 
-{% if extbans.description is defined %}{{extbans.description}}{% endif %}
+{{extbans.description}}
 
 <table>
 <tr>
@@ -248,7 +242,7 @@ This module requires no other configuration.
 {% endif -%}
 {% endif -%}
 
-{% if snomasks is defined -%}
+{% if snomasks -%}
 ### Server Notice Masks
 
 <table>
@@ -265,7 +259,7 @@ This module requires no other configuration.
 </table>
 {% endif -%}
 
-{% if stats is defined -%}
+{% if stats -%}
 ### Statistics
 
 <table>
@@ -282,12 +276,12 @@ This module requires no other configuration.
 </table>
 {% endif -%}
 
-{% if misc is defined -%}
+{% if misc -%}
 {{misc}}
 
 {% endif -%}
 
-{% if special_notes is defined and special_notes -%}
+{% if special_notes -%}
 ### Special Notes
 
 {{special_notes}}
